# polynomial-tools-c

./: .gitignore  CMakeLists.txt  README.md  run.sh  test.sh
include/: bmp.h  extended_value.h  int_array_list.h  interval.h  interval_array_list.h  plot.h  point.h  point_array_list.h  polynomial.h  root.h  root_array_list.h  string_utils.h  sturm_sequence.h
src/: bmp.c  extended_value.c  int_array_list.c  interval.c  interval_array_list.c  main.c  plot.c  point.c  point_array_list.c  polynomial_arithmetic.c  polynomial_compute.c  polynomial_create.c  polynomial_evaluate.c  polynomial_properties.c  polynomial_to_string.c  root.c  root_array_list.c  string_utils.c  sturm_sequence.c
tests/: test_create_polynomial.c  test_inflection_and_concavity.c  test_monotonicity_and_extrema.c  test_polynomial_arithmetic.c  test_polynomial_derivative.c  test_polynomial_evaluation.c  test_positive_negative_intervals.c  test_roots.c  test_sturm_sequence.c
